# lex-work

./: .gitignore  CMakeLists.txt  README.md
data/: lex.html  output
src/: htmlex.cpp  lexer.l  parser.cpp  parser.h  tokens.h
